--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
     "watchLint": "esw . --ext=mjs --ext mjs --fix --color -w",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:tcollinsworth/https-express-test.git"
+  },
+
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "eslint": "^8.7.0",
     "eslint-config-airbnb-base": "^15.0.0",
