--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "type": "git",
     "url": "git@github.com:tcollinsworth/https-express-test.git"
   },
-
   "author": "",
   "license": "MIT",
   "dependencies": {
@@ -23,6 +22,7 @@
     "eslint-watch": "^8.0.0",
     "express": "^4.17.2",
     "ignore-styles": "^5.0.1",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "rndm": "^1.2.0"
   }
 }
